welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
	def enPosition:Boolean = {
		if (getX()==getMondeLargeur()-1 && getY()==getMondeHauteur()-1) {
			return true
		}
		else {return false}
	}
	var x:Int=0
	var y:Int=0
	var compteur:Int=0
	var aig:Int=0
	def initialise() {
		coord match {
		case (x<getMondeLargeur()-1 && aig==0) => x=x+1
		case (x==getMondeLargeur()-1 && aig==0) => y=y+1 aig=1
		case (x>0 && aig==1) => x=x-1
		case (x==0 && aig==1) => y=y+1 aig=0
	}
	}

	ecritMessage(compteur)
	while (!enPosition) {
		initialise()
		setPos(x,y)
		compteur=compteur+1
		ecritMessage(compteur)
		
	}



	

}
